RGIE ingestion: controllers, CORS config, env config, user_societes migration