@@ -1,27 +1,82 @@
 package com.webelec.backend.config;
 
+import java.util.Arrays;
 import java.util.List;
 
-//aide
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 @Configuration
 public class CorsConfig {
 
+    @Value("${spring.profiles.active:dev}")
+    private String activeProfile;
+
+    @Value("${cors.allowed-origins:*}")
+    private String allowedOrigins;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
+
+        // Convertir la chaîne d'origines en liste
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+
+        // En développement : mode permissif
+        if ("dev".equals(activeProfile) || "test".equals(activeProfile)) {
+            config.setAllowedOriginPatterns(origins);
+            config.setAllowedMethods(List.of("*"));
+            config.setAllowedHeaders(List.of("*"));
+            config.setAllowCredentials(true);
+            config.setMaxAge(3600L);
+        }
+        // En production : mode restrictif
+        else {
+            config.setAllowedOriginPatterns(origins);
+            config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+            config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+            config.setAllowCredentials(true);
+            config.setMaxAge(3600L);
+        }
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
+    }
+
+    @Bean
+    public WebMvcConfigurer corsConfigurer() {
+        return new WebMvcConfigurer() {
+            @Override
+            public void addCorsMappings(CorsRegistry registry) {
+                // Convertir la chaîne d'origines en tableau
+                String[] origins = allowedOrigins.split(",");
+
+                // En développement : mode permissif
+                if ("dev".equals(activeProfile) || "test".equals(activeProfile)) {
+                    registry.addMapping("/**")
+                        .allowedOriginPatterns(origins)
+                        .allowedMethods("*")
+                        .allowedHeaders("*")
+                        .allowCredentials(true)
+                        .maxAge(3600);
+                }
+                // En production : mode restrictif
+                else {
+                    registry.addMapping("/**")
+                        .allowedOriginPatterns(origins)
+                        .allowedMethods("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")
+                        .allowedHeaders("Authorization", "Content-Type", "X-Requested-With")
+                        .allowCredentials(true)
+                        .maxAge(3600);
+                }
+            }
+        };
     }
 }
